--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             android:exported="true"
             android:theme="@style/AppTheme"
             android:screenOrientation="unspecified"
+            android:imeOptions="flagNoExtractUi"
             android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
